// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Errors accepts props 1`] = `
.c0 {
  margin-top: 6.5px;
  color: #dd4b39;
}

<p
  className="error-class test c0"
  id="errorId"
  role="alert"
>
  Test Error
</p>
`;

exports[`Errors does not render without child 1`] = `null`;

exports[`Errors renders with child 1`] = `
.c0 {
  margin-top: 6.5px;
  color: #dd4b39;
}

<p
  className="c0"
  role="alert"
>
  Test Error
</p>
`;
